--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <header>
-        
+<body class="main">
+    <header class="main-header header">
+        <nav class="header-navigation navigation">
+            <ul class="navigation-list">
+                <li class="navigation-item">
+                    <a href="" class="navigation-link"></a>
+                </li>
+                <li class="navigation-item">
+                    <a href="" class="navigation-link"></a>
+                </li>
+                <li class="navigation-item">
+                    <a href="" class="navigation-link"></a>
+                </li>
+                <li class="navigation-item">
+                    <a href="" class="navigation-link"></a>
+                </li>
+                <li class="navigation-item">
+                    <a href="" class="navigation-link"></a>
+                </li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
